--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <div class="base">
+    <img src="/images/image-equilibrium.jpg" alt="">
+    <h1>Equialibrium#3429</h1>
+    <p class="description">Our Equialibrium collection promotes balance and calm.</p>
+    
+    <div class="icons">
+      <div class="cont">
+        <img src="/images/icon-ethereum.svg" alt="" class="ethIcon">
+        <p class="eth">0.041 ETH</p>
+      </div>
+      <div class="cont">
+        <img src="/images/icon-clock.svg" alt="" class="clockIcon">
+        <p>3 days left</p>
+      </div>
+    </div>
+    <hr>
+    <div class="author">
+      <img src="/images/image-avatar.png" alt="" class="avatar">
+      <p class="Creation">Creation of <span style="color: hsl(0, 0%, 100%);">Jules Wyvern</span></p>
+    </div>
+  </div>
 </body>
 </html>
